# abar

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  lib.rs  main.rs  monitor.rs  statusbar.rs  statusblock.rs  threadpool.rs  utils.rs
src/statusbar/: builder.rs  mod.rs
src/statusblock/: builder.rs  cache.rs  mod.rs
