[package]
name = "abar"
version = "0.6.0"
authors = ["Laura Powles <laura@laurapowles.com>"]
edition = "2021"

license-file = "LICENSE"
description = "An interface for creating dynamic, \"blocks\"-style status strings"
repository = "https://github.com/nebulaeandstars/abar"

[dependencies]
rand = "0.8.4"
flume = "0.10.9"
