[package]
name = "abar"
version = "0.6.1"
authors = ["Laura Powles <laura@laurapowles.com>"]
edition = "2021"

license-file = "LICENSE"
description = "An interface for creating dynamic, \"blocks\"-style status strings"
repository = "https://github.com/nebulaeandstars/abar"

[lib]
name = "abar"
path = "src/lib.rs"

[dependencies]
getopts = "0.2.21"
